--- a/src/Awalan/Register.form
+++ b/src/Awalan/Register.form
@@ -131,6 +131,7 @@
         </Property>
       </Properties>
       <Events>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="registrasiMousePressed"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="registrasiActionPerformed"/>
       </Events>
     </Component>
