--- a/src/com/loket/main/Main.form
+++ b/src/com/loket/main/Main.form
@@ -35,29 +35,31 @@
   </Layout>
   <SubComponents>
     <Container class="com.loket.swing.pn_Border" name="pn_Border1">
-      <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
-        </Property>
-      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Component id="menu1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="950" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+                  <Component id="header1" pref="963" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="menu1" alignment="0" pref="620" max="32767" attributes="0"/>
+              <Component id="menu1" pref="620" max="32767" attributes="0"/>
+              <Group type="102" attributes="0">
+                  <Component id="header1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
         <Component class="com.loket.komponen.Menu" name="menu1">
+        </Component>
+        <Component class="com.loket.komponen.Header" name="header1">
         </Component>
       </SubComponents>
     </Container>
